# projeto1_lp2

./: CMakeLists.txt  README.md
src/: gerar_texto.py  main.c
